# raytracing-course-2024

./: .gitignore  Cargo.toml  build.sh  run.sh  template
scenes/: working.txt
src/: aabb.rs  bvh.rs  distributions.rs  geometry.rs  gltf_to_scene.rs  main.rs  new_intersect_with_scene  rendering.rs  scene.rs  tests.rs  utils.rs
