[package]
name = "raytracing-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
rustflags = ["-Z", "threads=6", "RUST_BACKTRACE=full"]

[dependencies]
nalgebra = "0.32.3"
image = "0.24.8"
rand = "0.8.5"
rayon = "1.9.0"
arrayvec = "0.7.4"
fastrand = "2.0.1"
rand_distr = "0.4.3"
env_logger = "0.11.3"
log = "0.4.21"



# [profile.release]
# debug = true
# panic = "abort"


