[package]
name = "raytracing-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
nalgebra = "0.32.3"
image = "0.24.8"
rand = "0.8.5"
rayon = "1.9.0"
arrayvec = "0.7.4"
rand_distr = "0.4.3"
env_logger = "0.11.3"
log = "0.4.21"
rand_xoshiro = "0.6.0"

[dependencies.gltf]
version = "1.2"
features = ["extras", "names", "utils", "KHR_materials_emissive_strength"]

[profile.dev]
debug = true

# [profile.release]
# debug = true
# panic = "abort"


